frontend/tests/cases/positive/effects/state-handling.gr
y : forall {s : Type, eff : EffectOps} . b <eff> -> s -> (b, s) <eff> -- \ {Get s, Put s}
y = \e ->  
 (e)
  handle : forall {a : Type} . s -> (a, s) {
     pure x -> \s -> (x, s);
     put s1 k -> \s0 -> k () s1;
     get k -> \s0 -> k s0 s0 
  }   
