frontend/tests/cases/negative/hsup/swapBad.gr
swapBad : forall {a b : Type} . (a, b) [Many] -> (b, a) [Many]
swapBad [(x, y)] = [(y, x)] 